Banner and Donate today section done

--- a/index.html
+++ b/index.html
@@ -7,35 +7,48 @@
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <title>Donate Today</title>
 
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="banner">
         <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
-        <button>Donate Now</button>
+        <button class="btn">Donate Now</button>
     </section>
     <section class="donate-today">
-        <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        <h2>Donate Today</h2>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
-        <ul class="donation-amount">
-            <li>100tk</li>
-            <li>200tk</li>
-            <li>500tk</li>
-            <li>1000tk</li>
-            <li>5000tk</li>
-        </ul>
-        <input type="text" placeholder="Other Amount (Taka)">
-        <button>Donate Now</button>
+
+        <div class="donate-amount">
+            <h4>100tk</h4>
+        </div>
+        <div id="regular-amount" class="donate-amount">
+            <h4>200tk</h4>
+        </div>
+        <div class="donate-amount">
+            <h4>500tk</h4>
+        </div>
+        <div class="donate-amount">
+            <h4>1000tk</h4>
+        </div>
+        <div class="donate-amount">
+            <h4>5000tk</h4>
+        </div>
+
+        <div>
+            <input  class="other-amount" type="text" placeholder="Other Amount (Taka)">
+        </div>
+
+        <button class="btn">Donate Now</button>
     </section>
     <section class="donate-plan">
-        <h1>Our Donate Plan</h1>
+        <h2>Our Donate Plan</h2>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
         <div class="plans">
@@ -66,15 +79,15 @@
         </div>
     </section>
     <section class="email">
-        <h1>Get My Updates</h1>
+        <h2>Get My Updates</h2>
         <p>Amet minim mollit non deserunt
             ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim
             velit mollit</p>
-            <form action="">
-               <input type="email" placeholder="Email">
-               <button>Subscribe</button>
-            </form>
+        <form action="">
+            <input type="email" placeholder="Email">
+            <button>Subscribe</button>
+        </form>
     </section>
     <footer>
         <h2>Be humble</h2>
