plans and footer done

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <title>Donate Today</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@200;700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,7 +25,7 @@
             deterruisset. No duo populo animal noluisse, enim</p>
         <button class="btn">Donate Now</button>
     </section>
-    <section class="donate-today">
+    <section class="donate">
         <h2>Donate Today</h2>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
@@ -42,35 +47,35 @@
         </div>
 
         <div>
-            <input  class="other-amount" type="text" placeholder="Other Amount (Taka)">
+            <input class="other-amount" type="text" placeholder="Other Amount (Taka)">
         </div>
 
         <button class="btn">Donate Now</button>
     </section>
-    <section class="donate-plan">
+    <section class="donate">
         <h2>Our Donate Plan</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentu <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
         <div class="plans">
-            <div id="">
-                <img src="" alt="">
-                <h2>Food for a family</h2>
+            <div id="plan-one">
+                <img class="plan-icons" src="./icons/icon8.svg" alt="">
+                <h5>Daily Foods</h5>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
                     velit mollit</p>
             </div>
-            <div id="">
-                <img src="" alt="">
-                <h2>Food for a family</h2>
+            <div id="plan-two">
+                <img class="plan-icons" src="./icons/icon13.svg" alt="">
+                <h5>Blood for Life</h5>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
                     velit mollit</p>
             </div>
-            <div id="">
-                <img src="" alt="">
-                <h2>Food for a family</h2>
+            <div id="plan-three">
+                <img class="plan-icons" src="./icons/donation.svg" alt="">
+                <h5>General Donation</h5>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
@@ -89,8 +94,8 @@
             <button>Subscribe</button>
         </form>
     </section>
-    <footer>
-        <h2>Be humble</h2>
+    <footer class="footer">
+        <h3>Be humble</h3>
         <p>I’m gonna do it</p>
     </footer>
 </body>
