--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,7 +25,7 @@
             deterruisset. No duo populo animal noluisse, enim</p>
         <button class="btn">Donate Now</button>
     </section>
-    <section class="donate">
+    <section>
         <h2>Donate Today</h2>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
@@ -50,9 +50,10 @@
             <input class="other-amount" type="text" placeholder="Other Amount (Taka)">
         </div>
 
-        <button class="btn">Donate Now</button>
+        <button>Donate Now</button>
+
     </section>
-    <section class="donate">
+    <section>
         <h2>Our Donate Plan</h2>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentu <br> at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
@@ -83,18 +84,18 @@
             </div>
         </div>
     </section>
-    <section class="email">
+    <section>
         <h2>Get My Updates</h2>
         <p>Amet minim mollit non deserunt
             ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim
+            sint. <br> Velit officia consequat duis enim
             velit mollit</p>
-        <form action="">
+        <div class="subscrib">
             <input type="email" placeholder="Email">
-            <button>Subscribe</button>
-        </form>
+            <button class="btn">Subscribe</button>
+        </div>
     </section>
-    <footer class="footer">
+    <footer>
         <h3>Be humble</h3>
         <p>I’m gonna do it</p>
     </footer>
