extra section and contents added

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
 <body>
     <section class="banner">
-        <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
-        <button class="btn">Donate Now</button>
+        <h1>We Are Here To Return Them <br> Hope</h1>
+        <p>We are a volunteering organization. We collect funds and distribute countrywide.<br>
+            Do you wish to make them smile? </p>
+        <button>Donate Now</button>
     </section>
     <section>
         <h2>Donate Today</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, <br> at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p> Little drops make the mighty ocean. <br> Your little contribution can bring them to life. </p>
 
         <div class="donate-amount">
             <h4>100tk</h4>
@@ -55,49 +54,57 @@
     </section>
     <section>
         <h2>Our Donate Plan</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentu <br> at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+        <p>These are our regular donation package. You can donate in minthly basis. <br> Besides these, you
+            can donate for shelter, education, safe water, sanitation and disaster.</p>
         <div class="plans">
             <div id="plan-one">
                 <img class="plan-icons" src="./icons/icon8.svg" alt="">
                 <h5>Daily Foods</h5>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>This package includes food for a family. five kilograms of rice, one kilogram of lentil, two
+                    kilograms of potato etc in taka 500 only. </p>
             </div>
             <div id="plan-two">
                 <img class="plan-icons" src="./icons/icon13.svg" alt="">
                 <h5>Blood for Life</h5>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>We conduct blood donation campaigns in every month and store in blood bank. please visit our social
+                    media pages for details.</p>
             </div>
             <div id="plan-three">
                 <img class="plan-icons" src="./icons/donation.svg" alt="">
                 <h5>General Donation</h5>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>You can donate in general fund. Now we are collecting for flood affected people.Please keep eyes on
+                    our facebook page. </p>
             </div>
         </div>
     </section>
     <section>
-        <h2>Get My Updates</h2>
-        <p>Amet minim mollit non deserunt
-            ullamco est sit aliqua dolor do amet
-            sint. <br> Velit officia consequat duis enim
-            velit mollit</p>
-        <div class="subscrib">
+        <h2>Need Volunteers</h2>
+        <p>Be a part of our team. <br> Emergency volunteers need for goods packaging, carring and distribution on flood
+            affected areas. </p>
+        <div id="volunteers">
+            <form class="volunteer-form" action="">
+                <input type="text" placeholder="Full Name">
+
+                <input type="=email" placeholder="Email">
+
+                <input type="tel" placeholder="Phone number">
+
+                <button>Submit</button>
+            </form>
+        </div>
+
+    </section>
+    <section>
+        <h2>Stay With Us</h2>
+        <p>We send emails about our upcoming events to donors and volunteers. </p>
+        <form class="subscrib">
             <input type="email" placeholder="Email">
             <button class="btn">Subscribe</button>
-        </div>
+        </form>
     </section>
     <footer>
-        <h3>Be humble</h3>
-        <p>I’m gonna do it</p>
+        <h3>Contact Us</h3>
+        <p>+88 01234 555 999  ||  donate@gmail.com</p>
     </footer>
 </body>
 
