--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1, initial-scale=1.0">
-    <title>Donate Today</title>
+    <title>Light Of Hope</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,7 +27,6 @@
     <section>
         <h2>Donate Today</h2>
         <p> Little drops make the mighty ocean. <br> Your little contribution can bring them to life. </p>
-
         <div class="donate-amount">
             <h4>100tk</h4>
         </div>
@@ -44,16 +42,13 @@
         <div class="donate-amount">
             <h4>5000tk</h4>
         </div>
-
         <div>
             <input class="other-amount" type="text" placeholder="Other Amount (Taka)">
         </div>
-
         <button>Donate Now</button>
-
     </section>
     <section>
-        <h2>Our Donate Plan</h2>
+        <h2>Our Donation Plan</h2>
         <p>These are our regular donation package. You can donate in minthly basis. <br> Besides these, you
             can donate for shelter, education, safe water, sanitation and disaster.</p>
         <div class="plans">
@@ -84,27 +79,23 @@
         <div id="volunteers">
             <form class="volunteer-form" action="">
                 <input type="text" placeholder="Full Name">
-
                 <input type="=email" placeholder="Email">
-
                 <input type="tel" placeholder="Phone number">
-
                 <button>Submit</button>
             </form>
         </div>
-
     </section>
     <section>
         <h2>Stay With Us</h2>
-        <p>We send emails about our upcoming events to donors and volunteers. </p>
-        <form class="subscrib">
+        <p>We send emails about our upcoming events to donors and volunteers. <br>Thanks for staying with us.</p>
+        <form class="subscribe">
             <input type="email" placeholder="Email">
             <button class="btn">Subscribe</button>
         </form>
     </section>
     <footer>
         <h3>Contact Us</h3>
-        <p>+88 01234 555 999  ||  donate@gmail.com</p>
+        <p>+88 01234 555 999 || donate@gmail.com</p>
     </footer>
 </body>
 
